--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,9 @@
   h6 {
     @apply text-base text-dark;
   }
+  ::-webkit-scrollbar {
+    @apply w-0 text-transparent
+  }
 }
 
 @layer components {
